; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_utosi.c_acpi_ut_update_interfaces.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_utosi.c_acpi_ut_update_interfaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_interface_info = type { i32, %struct.acpi_interface_info* }

@acpi_gbl_supported_interfaces = common dso_local global %struct.acpi_interface_info* null, align 8
@ACPI_OSI_FEATURE = common dso_local global i32 0, align 4
@ACPI_FEATURE_STRINGS = common dso_local global i32 0, align 4
@ACPI_VENDOR_STRINGS = common dso_local global i32 0, align 4
@ACPI_DISABLE_INTERFACES = common dso_local global i32 0, align 4
@ACPI_OSI_INVALID = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_ut_update_interfaces(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_interface_info*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.acpi_interface_info*, %struct.acpi_interface_info** @acpi_gbl_supported_interfaces, align 8
  store %struct.acpi_interface_info* %4, %struct.acpi_interface_info** %3, align 8
  br label %5

5:                                                ; preds = %51, %1
  %6 = load %struct.acpi_interface_info*, %struct.acpi_interface_info** %3, align 8
  %7 = icmp ne %struct.acpi_interface_info* %6, null
  br i1 %7, label %8, label %55

8:                                                ; preds = %5
  %9 = load %struct.acpi_interface_info*, %struct.acpi_interface_info** %3, align 8
  %10 = getelementptr inbounds %struct.acpi_interface_info, %struct.acpi_interface_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = load i32, i32* @ACPI_OSI_FEATURE, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %8
  %16 = load i32, i32* %2, align 4
  %17 = load i32, i32* @ACPI_FEATURE_STRINGS, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %32, label %20

20:                                               ; preds = %15, %8
  %21 = load %struct.acpi_interface_info*, %struct.acpi_interface_info** %3, align 8
  %22 = getelementptr inbounds %struct.acpi_interface_info, %struct.acpi_interface_info* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* @ACPI_OSI_FEATURE, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %51, label %27

27:                                               ; preds = %20
  %28 = load i32, i32* %2, align 4
  %29 = load i32, i32* @ACPI_VENDOR_STRINGS, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %51

32:                                               ; preds = %27, %15
  %33 = load i32, i32* %2, align 4
  %34 = load i32, i32* @ACPI_DISABLE_INTERFACES, align 4
  %35 = and i32 %33, %34
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %32
  %38 = load i32, i32* @ACPI_OSI_INVALID, align 4
  %39 = load %struct.acpi_interface_info*, %struct.acpi_interface_info** %3, align 8
  %40 = getelementptr inbounds %struct.acpi_interface_info, %struct.acpi_interface_info* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = or i32 %41, %38
  store i32 %42, i32* %40, align 8
  br label %50

43:                                               ; preds = %32
  %44 = load i32, i32* @ACPI_OSI_INVALID, align 4
  %45 = xor i32 %44, -1
  %46 = load %struct.acpi_interface_info*, %struct.acpi_interface_info** %3, align 8
  %47 = getelementptr inbounds %struct.acpi_interface_info, %struct.acpi_interface_info* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 8
  %49 = and i32 %48, %45
  store i32 %49, i32* %47, align 8
  br label %50

50:                                               ; preds = %43, %37
  br label %51

51:                                               ; preds = %50, %27, %20
  %52 = load %struct.acpi_interface_info*, %struct.acpi_interface_info** %3, align 8
  %53 = getelementptr inbounds %struct.acpi_interface_info, %struct.acpi_interface_info* %52, i32 0, i32 1
  %54 = load %struct.acpi_interface_info*, %struct.acpi_interface_info** %53, align 8
  store %struct.acpi_interface_info* %54, %struct.acpi_interface_info** %3, align 8
  br label %5

55:                                               ; preds = %5
  %56 = load i32, i32* @AE_OK, align 4
  ret i32 %56
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
